Separate url and url parts image

--- a/images/url_parts/url_parts.tex
+++ b/images/url_parts/url_parts.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 \begin{tikzpicture}
-	\draw (-1, 0.5) node[anchor=north,fill=white] {http://some.domain.org/path/to/file?key=val\&other=val2\&fin=3141};
+	\draw (-1, 0.5) node[anchor=north,fill=white] {http://\textcolor{red}{some.domain.org}/\textcolor{violet}{path/to/file}?\textcolor{blue}{key=val\&other=val2\&fin=3141}};
 \end{tikzpicture}
 
 \end{document}
