--- a/model.tex
+++ b/model.tex
@@ -9,7 +9,7 @@ Hledání funkce \( \phi \) - neuronové sítě. Použité vrstvy. ADAM (možná
 \begin{figure}
 	\caption{Části adresy URL}\label{url_parts}
 	\centering
-	\includegraphics{images/url/url.pdf}
+	\includegraphics{images/url_parts/url_parts.pdf}
 \end{figure}
 
 \begin{figure}
