--- a/zotero.bib
+++ b/zotero.bib
@@ -1,3 +1,4 @@
+
 @article{pevny_using_2016,
 	title = {Using Neural Network Formalism to Solve Multiple-Instance Problems},
 	url = {http://arxiv.org/abs/1609.07257},
@@ -190,7 +191,7 @@
 
 @report{berners-lee_uniform_1994,
 	title = {Uniform Resource Locators ({URL})},
-	url = {https://www.ietf.org/rfc/rfc1738.txt},
+	url = {https://tools.ietf.org/html/rfc1738},
 	pages = {1--25},
 	number = {1738},
 	institution = {{CERN}},
@@ -198,4 +199,16 @@
 	urldate = {2017-06-05},
 	date = {1994-12},
 	file = {:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/GMQHMWSH/rfc1738.txt:text/plain}
+}
+
+@report{mockapetris_domain_1987,
+	title = {Domain names - concepts and facilities},
+	url = {https://tools.ietf.org/html/rfc1034},
+	pages = {1--55},
+	institution = {Network Working Group},
+	type = {1034},
+	author = {Mockapetris, Paul V.},
+	urldate = {2017-06-24},
+	date = {1987-11},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/GI3UEEKC/rfc1034.html:text/html}
 }
