--- a/MIL.tex
+++ b/MIL.tex
@@ -1,4 +1,4 @@
-\chapter{Multi-instanční učení}
+\chapter{Multi-instanční učení}\label{MIL}
 
 Co to je, definice z \cite{dietterich_solving_1997}.
 
