--- a/problem.tex
+++ b/problem.tex
@@ -1,6 +1,4 @@
-\chapter{Řešená úloha}
-
-O učení z url, dělení na části, jejich významu.
+\chapter{Řešená úloha}\label{problem}
 
 Řešená úloha je problémem binární klasifikace, tedy problém, kdy je cílem zařadit objekty do jedné ze dvou tříd, jež nazýváme pozitivní a negativní. Tedy cílem je navrhnout vhodnou klasifikační funkci, který pro daný vstupní objekt určí příslušnou třídu. Vstupními objekty jsou v tomto případě adresy URL (srov. \cite{berners-lee_uniform_1994}). Příklad takovéto adresy je na obrázku \ref{url}. Negativní třídou se rozumí veškerý síťový provoz, který je součástí běžného provozu uživatele-klienta a jím spuštěných programů. Pozitivní třídou se rozumí síťový provoz který pochází z aktivit malware a nežádoucího software.
 
