--- a/zotero.bib
+++ b/zotero.bib
@@ -212,3 +212,32 @@
 	date = {1987-11},
 	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/GI3UEEKC/rfc1034.html:text/html}
 }
+
+@book{knuth_art_1968,
+	title = {The Art of Computer Programming},
+	isbn = {0-201-03801-3},
+	publisher = {Addison-Wesley},
+	author = {Knuth, Donald E.},
+	date = {1968},
+	langid = {english}
+}
+
+@inproceedings{zhou_neural_2002,
+	title = {Neural Networks for Multi-Instance Learning},
+	url = {http://cs.nju.edu.cn/zhouzh/zhouzh.files/publication/techrep02.pdf},
+	pages = {455--459},
+	booktitle = {Proceedings of the International Conference on Intelligent Information Technology, Beijing, China},
+	author = {Zhou, Zhi-Hua and Zhang, Min-Ling},
+	urldate = {2017-06-26},
+	date = {2002-08},
+	langid = {english}
+}
+
+@article{maron_learning_1998,
+	title = {Learning from ambiguity},
+	url = {https://dspace.mit.edu/handle/1721.1/7087},
+	author = {Maron, Oded},
+	urldate = {2017-06-26},
+	date = {1998},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/MGB4MJRC/7087.html:text/html}
+}
