Macro for name and english name

--- a/preamble.tex
+++ b/preamble.tex
@@ -39,9 +39,12 @@
 \theoremstyle{remark}
 \newtheorem{remark}[define]{Poznámka}
 
-\newcommand{\BPspace}{\mathcal}
-\newcommand{\BPfield}{\mathbb}
-\newcommand{\BPset}{\mathbb}
-\newcommand{\BPvec}{\vec}
+\newcommand{\BPname}[1]{\textbf{#1}}
+\newcommand{\BPenname}[1]{\textit{\textenglish{#1}}}
+
+\newcommand{\BPspace}{\ensuremath{\mathcal}}
+\newcommand{\BPfield}{\ensuremath{\mathbb}}
+\newcommand{\BPset}{\ensuremath{\mathbb}}
+\newcommand{\BPvec}{\ensuremath{\vec}}
 
 \usepackage{todonotes}
