Added multiset size definition

--- a/MIL.tex
+++ b/MIL.tex
@@ -44,6 +44,11 @@ Multimnožina je tedy zobecněním pojmu množiny, ve kterém se prvky mohou vys
 
 Množina všech podmultimnožin je tedy zobecněním potenční množiny, označované \( 2^{\BPset A} \).
 
+\begin{define}
+	Nechť \( \BPset B = \left( \BPset A, m \right) \) je multimnožina, kde \( \BPset A \) je konečná množina. Definujeme \BPname{velikost multimnožiny} \( \BPset B \) jako
+	\[ \left| \BPset B \right| = \sum_{a \in \BPset A} m \left( a \right) \]
+\end{define}
+
 \section{Multi-instanční učení - definice}
 
 Nyní již lze korektně definovat pojem tašky.
