--- a/BP.tex
+++ b/BP.tex
@@ -56,6 +56,7 @@
 
 %\nocite{*}
 \todo{Zkontrolovat overflow}
+\todo{Zkontrolovat https://github.com/michal-h21/biblatex-iso690/issues/58}
 \printbibliography[title=Literatura]
 
 \end{document}
