Expanded Bag-space paradigm, Citation-kNN

--- a/zotero.bib
+++ b/zotero.bib
@@ -321,3 +321,40 @@
 	urldate = {2017-07-01},
 	date = {2003}
 }
+
+@inproceedings{wang_solving_2000,
+	title = {Solving Multiple-Instance Problem: A Lazy Learning Approach},
+	url = {http://cogprints.org/2124/},
+	shorttitle = {Solving Multiple-Instance Problem},
+	abstract = {As opposed to traditional supervised learning, multiple-instance learning 
+    concerns the problem of classifying a bag of instances, given bags that are 
+    labeled by a teacher as being overall positive or negative. Current research 
+    mainly concentrates on adapting traditional concept learning to solve this 
+    problem. In this paper we investigate the use of lazy learning and Hausdorff 
+    distance to approach the multiple-instance problem. We present two variants of 
+    the K-nearest neighbor algorithm, called Bayesian-{KNN} and Citation-{KNN}, solving 
+    the multiple-instance problem. Experiments on the Drug discovery benchmark data 
+    show that both algorithms are competitive with the best ones conceived in the 
+    concept learning framework. Further work includes exploring of a combination of 
+    lazy and eager multiple-instance problem classifiers.},
+	pages = {1119--1125},
+	publisher = {Morgan Kaufmann},
+	author = {Wang, Jun and Zucker, Jean-Daniel},
+	editor = {Langley, Pat},
+	urldate = {2017-07-01},
+	date = {2000},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/7C2WC3ZI/2124.html:text/html}
+}
+
+@book{dasarathy_nearest_1991,
+	title = {Nearest neighbor ({NN}) norms: nn pattern classification techniques},
+	isbn = {978-0-8186-5930-0},
+	shorttitle = {Nearest neighbor ({NN}) norms},
+	pagetotal = {474},
+	publisher = {{IEEE} Computer Society Press},
+	author = {Dasarathy, Belur V.},
+	date = {1991},
+	langid = {english},
+	note = {Google-Books-{ID}: k2dQAAAAMAAJ},
+	keywords = {Mathematics / Probability \& Statistics / General, Psychology / Cognitive Psychology}
+}
